Fix edit/destroy button display on small screens

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -78,15 +78,13 @@ blockquote p {
 
 #edit-container {
   margin-left: 3px;
+  margin-top: 3px;
 }
 
 .add-content-button {
   margin-left: 3px;
 }
 
-.img-sample {
-  
-}
 
 .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
   max-height: 550px;
